--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="https://i.pinimg.com/736x/d6/3c/60/d63c600b41c4bb3558a6b36a32f69f95.jpg" width="100" height="120">
     <img src="https://i.pinimg.com/736x/ce/f8/53/cef85321ed74b32c6b9542e879b5892a.jpg" width="100" height="120">
     <img src="https://i.pinimg.com/736x/2d/36/14/2d3614b95df7a3c1d89c1c518ecedb97.jpg" width="100" height="120">
-    <p class="pod">"Я просто продал картошку"</p>
+    <p class="pod">"Я просто продал картошку7"</p>
     <p class="pod">"судя по часам, я опаздываю"</p>
     <p class="pod">"Я богатейший человек из древнего египта на планете"</p>
     <p class="pod">"Я самый умный рэпер"</p>
