--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="up-menu">
-        <a href="/about.html"><p class="text-up">О нас</p></a>
-        <a href="/Brends.html"><p class="text-up">Топовые брэнды</p></a>
-        <a href="/D.html"><p class="text-up">Все наши товары</p></a>
+        <a href="./about.html"><p class="text-up">О нас</p></a>
+        <a href="./Brends.html"><p class="text-up">Топовые брэнды</p></a>
+        <a href="./D.html"><p class="text-up">Все наши товары</p></a>
     </div>
     <p class = "Zagl">Принцип по которому мы изнотавливаем наши высококачественные товары</p>
     <div class="I"><img src="https://sun9-17.userapi.com/impf/T5CSmikTFywwv6_SE5EXpyWWudDO2uEwioKFBw/5JV1N6rNMKc.jpg?size=604x247&quality=96&sign=938ba4a90ebb7acbfed25fd14c796b86&type=album"
